# opendota-sdk

./: LICENSE  README.md  prek.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/opendota_sdk/: __init__.py  _config.py  _errors.py  client.py  enums.py  models.py  responses.py
src/opendota_sdk/http/: __init__.py  _auth.py  _retry.py  _transport.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_config.py  test_retry.py  test_transport.py
