[project]
name = "opendota-sdk"
version = "0.1.0"
description = "SDK for the OpenDota API, providing enhanced capabilities for Dota 2 data."
readme = "README.md"
authors = [
    { name = "Juan Manuel Bermudez Cabrera", email = "juanmorestep@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "niquests>=3.9,<4.0",
  "tenacity>=9.0,<10.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
    "ty==0.0.29",
]
