[project]
name = "opendota-sdk"
version = "0.1.0-alpha.1"
description = "SDK for the OpenDota API, providing enhanced capabilities for Dota 2 data."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Juan Manuel Bermudez Cabrera", email = "juanmorestep@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
  "niquests>=3.9,<4.0",
  "tenacity>=9.0,<10.0",
]

[project.urls]
Homepage = "https://github.com/jbnone/opendota-sdk"
Issues = "https://github.com/jbnone/opendota-sdk/issues"
Repository = "https://github.com/jbnone/opendota-sdk"


[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
    "ty==0.0.33",
]
